added theme, renamed template and additional styles

--- a/reveal.js/s3-styles.css
+++ b/reveal.js/s3-styles.css
@@ -4,8 +4,8 @@
 
 .reveal section img {
   border: 0px; 
-  xbox-shadow: 0 0 0 0;
-  xmax-height: 600px;
+  box-shadow: 0 0 0 0;
+  max-height: 600px;
 }
 
 .reveal .float-right {
