--- a/templates/revealjs-template.html
+++ b/templates/revealjs-template.html
@@ -7,13 +7,13 @@
 		<title>S3 - Patterns</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="s3-theme.css">
+		<link rel="stylesheet" href="custom-theme.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- Some fixes (mainly for images) -->
-		<link rel="stylesheet" href="s3-styles.css">
+		<link rel="stylesheet" href="custom-styles.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -46,7 +46,7 @@
 			    progress: true,
 
 			    // Display the page number of the current slide
-			    slideNumber: false,
+			    slideNumber: true,
 
 			    // Push each slide change to the browser history
 			    history: true,
@@ -89,7 +89,7 @@
 			    // Number of milliseconds between automatically proceeding to the
 			    // next slide, disabled when set to 0, this value can be overwritten
 			    // by using a data-autoslide attribute on your slides
-			    autoSlide: 0,
+			    autoSlide: 5000,
 
 			    // Stop auto-sliding after user input
 			    autoSlideStoppable: true,
@@ -107,7 +107,7 @@
 			    previewLinks: true,
 
 			    // Transition style
-			    transition: 'default', // none/fade/slide/convex/concave/zoom
+			    transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 			    // Transition speed
 			    transitionSpeed: 'default', // default/fast/slow
