added css for glossary overlay

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -49,5 +49,6 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
+        "glossary-overlay",
         "syntax-highlighting"
 ;
