--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -26,6 +26,7 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+          <li><a href=https://sociocracy30.org">Sociocracy 3.0 site</a></li>
         </ul>
       </div>
 
