new build with version numbers in all formats

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,6 +3,7 @@
   <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
+    
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
@@ -31,6 +32,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
+        <p><strong>v2018-03-21</strong></p>
         <p>{{ site.description }}</p>
         <p>This work by Bernhard Bockelbrink, James Priest and Liliana David is licensed under the <a href="http://creativecommons.org/licenses/by-sa/4.0/](http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
       </div>
