--- a/content/website/_includes/header.html
+++ b/content/website/_includes/header.html
@@ -4,7 +4,7 @@
 
     <p><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></p>
     
-    <p><a href="introduction.html">Introduction</a> | <a href="pattern-index.html">Pattern Index</a> | <a href="glossary.html">Glossary</a> | <a href="changelog.html">Changelog</a> | <a href="https://sociocracy30.org">Go to main S3 site</a> 
+    <p><a href="introduction.html">Introduction</a> | <a href="pattern-index.html">Pattern Index</a> | <a href="glossary.html">Glossary</a> | <a href="changelog.html">Changelog</a> | <a href="https://sociocracy30.org">Go to main S3 site</a> | <a href="" id="annotate-button">Annotate this page</a>
  
   </div>
 </header>
