--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -11,4 +11,23 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <script>
+    function setAnnotationHref() {
+      document.getElementById("annotate-button").href = "https://via.hypothesis/" + self.document.location.href;
+    }
+    function hideWhenAnnotating() {
+
+      href = self.document.location.href;
+      var testPrefix = "via.hypothes.is";
+      href = href.replace("https:\/\/", "");
+      href = href.replace("http:\/\/", "");
+      if (href.startsWith(testPrefix)) {
+        document.getElementById("annotate-button").style.visibility = 'hidden';
+      }
+    }
+    function setupAnnotations() {
+      setAnnotationHref();
+      hideWhenAnnotating();
+    }
+  </script>
 </head>
