--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -13,7 +13,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <script>
     function setAnnotationHref() {
-      document.getElementById("annotate-button").href = "https://via.hypothesis/" + self.document.location.href;
+      document.getElementById("annotate-button").href = "https://via.hypothes.is/" + self.document.location.href;
     }
     function hideWhenAnnotating() {
 
