--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -17,7 +17,7 @@
     }
     function hideWhenAnnotating() {
 
-      href = self.document.location.href;
+      var href = self.document.location.href;
       var testPrefix = "via.hypothes.is";
       href = href.replace("https:\/\/", "");
       href = href.replace("http:\/\/", "");
