--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -13,11 +13,11 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <script>
     function setAnnotationHref() {
-      document.getElementById("annotate-button").href = "https://via.hypothes.is/" + self.document.location.href;
+      document.getElementById("annotate-link").href = "https://via.hypothes.is/" + self.document.location.href;
     }
     function hideWhenAnnotating() {
       if (typeof(wbinfo) !== "undefined") {
-        document.getElementById("annotate-button").style.visibility = 'hidden';
+        document.getElementById("annotate-span").style.visibility = 'hidden';
       }
     }
     function setupAnnotations() {
