--- a/docs/_includes/pattern-map.html
+++ b/docs/_includes/pattern-map.html
@@ -15,7 +15,7 @@
 	<area shape=rect coords="40,90,160,160" href="https://patterns.sociocracy30.org/respond-to-organizational-drivers.html">
 	<area shape=rect coords="40,30,420,80" href="https://patterns.sociocracy30.org/co-creation-and-evolution.html">
 	<area shape=rect coords="300,90,420,160" href="https://patterns.sociocracy30.org/describe-organizational-drivers.html">
-	<area shape=rect coords="1300,350,1680,400" href="https://patterns.sociocracy30.org/bringin-in-s3.html">
+	<area shape=rect coords="1300,350,1680,400" href="https://patterns.sociocracy30.org/bringing-in-s3.html">
 	<area shape=rect coords="1430,490,1550,560" href="https://patterns.sociocracy30.org/open-space-for-change.html">
 	<area shape=rect coords="1430,410,1550,480" href="https://patterns.sociocracy30.org/create-a-pull-system-for-organizational-change.html">
 	<area shape=rect coords="1300,490,1420,560" href="https://patterns.sociocracy30.org/invite-change.html">
