fixed a problem with html footer and introduced github url variable

--- a/content/website/_includes/footer.html
+++ b/content/website/_includes/footer.html
@@ -9,7 +9,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li><a href="acknowledgments.html">Acknowledgments</a></p></li>
-          <li><a href="https://github.com/S3-working-group/s3-practical-guide">Fork on GitHub</a></li>
+          <li><a href="${github_url}">Fork on GitHub</a></li>
           <li>Contact:<br/><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
@@ -27,7 +27,7 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
-          <li><a href=https://sociocracy30.org">Sociocracy 3.0 site</a></li>
+          <li><a href="https://sociocracy30.org">Sociocracy 3.0 site</a></li>
         </ul>
       </div>
 
