--- a/content/website/_includes/footer.html
+++ b/content/website/_includes/footer.html
@@ -34,7 +34,7 @@
       <div class="footer-col footer-col-3">
         <p><strong>${version}</strong></p>
         <p>{{ site.description }}</p>
-        <p>This work by Bernhard Bockelbrink, James Priest and Liliana David is licensed under the <a href="http://creativecommons.org/licenses/by-sa/4.0/](http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+        <p>This work by Bernhard Bockelbrink, James Priest and Liliana David is licensed under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
       </div>
     </div>
 
