--- a/docs/_includes/pattern-map.html
+++ b/docs/_includes/pattern-map.html
@@ -11,7 +11,7 @@
 	<area shape=rect coords="40,170,160,240" href="https://patterns.sociocracy30.org/consent-decision-making.html">
 	<area shape=rect coords="300,250,420,320" href="https://patterns.sociocracy30.org/co-create-proposals.html">
 	<area shape=rect coords="170,90,290,160" href="https://patterns.sociocracy30.org/navigate-via-tension.html">
-	<area shape=rect coords="170,170,290,240" href="https://patterns.sociocracy30.org/objection.html">
+	<area shape=rect coords="170,170,290,240" href="https://patterns.sociocracy30.org/test-arguments-qualify-as-objections.html">
 	<area shape=rect coords="40,90,160,160" href="https://patterns.sociocracy30.org/respond-to-organizational-drivers.html">
 	<area shape=rect coords="40,30,420,80" href="https://patterns.sociocracy30.org/co-creation-and-evolution.html">
 	<area shape=rect coords="300,90,420,160" href="https://patterns.sociocracy30.org/describe-organizational-drivers.html">
@@ -66,7 +66,7 @@
 	<area shape=rect coords="1430,170,1550,240" href="https://patterns.sociocracy30.org/clarify-intended-outcome.html">
 	<area shape=rect coords="1560,250,1680,320" href="https://patterns.sociocracy30.org/logbook-keeper.html">
 	<area shape=rect coords="1300,250,1420,320" href="https://patterns.sociocracy30.org/logbook.html">
-	<area shape=rect coords="1300,90,1420,160" href="https://patterns.sociocracy30.org/agreement.html">
+	<area shape=rect coords="1300,90,1420,160" href="https://patterns.sociocracy30.org/record-agreements.html">
 	<area shape=rect coords="1430,90,1550,160" href="https://patterns.sociocracy30.org/develop-strategy.html">
 	<area shape=rect coords="1300,30,1680,80" href="https://patterns.sociocracy30.org/defining-agreements.html">
 	<area shape=rect coords="590,250,710,320" href="https://patterns.sociocracy30.org/support-role.html">
