--- a/content/website/_includes/footer.html
+++ b/content/website/_includes/footer.html
@@ -10,6 +10,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li><a href="acknowledgments.html">Acknowledgments</a></p></li>
+          <li><a href="disclaimer.html">Disclaimer</a></p></li>
           <li><a href="${github_url}">Fork on GitHub</a></li>
           <li>Contact:<br/><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
