--- a/templates/website/pattern-map.html
+++ b/templates/website/pattern-map.html
@@ -61,13 +61,13 @@
 	<area shape=rect coords="170,490,290,560" href="https://${microsite_cname}/governance-meeting.html">
 	<area shape=rect coords="40,429,420,480" href="https://${microsite_cname}/focused-interactions.html">
 	<area shape=rect coords="1560,170,1680,240" href="https://${microsite_cname}/describe-deliverables.html">
-	<area shape=rect coords="1560,90,1680,160" href="https://${microsite_cname}/clarify-domains.html">
+	<area shape=rect coords="1560,90,1680,160" href="https://${microsite_cname}/clarify-and-develop-domains.html">
 	<area shape=rect coords="1300,170,1420,240" href="https://${microsite_cname}/evaluation-criteria.html">
 	<area shape=rect coords="1430,170,1550,240" href="https://${microsite_cname}/clarify-intended-outcome.html">
 	<area shape=rect coords="1560,250,1680,320" href="https://${microsite_cname}/logbook-keeper.html">
 	<area shape=rect coords="1300,250,1420,320" href="https://${microsite_cname}/logbook.html">
 	<area shape=rect coords="1300,90,1420,160" href="https://${microsite_cname}/record-agreements.html">
-	<area shape=rect coords="1430,90,1550,160" href="https://${microsite_cname}/develop-strategy.html">
+	<area shape=rect coords="1430,90,1550,160" href="https://${microsite_cname}/clarify-and-develop-strategy.html">
 	<area shape=rect coords="1300,30,1680,80" href="https://${microsite_cname}/defining-agreements.html">
 	<area shape=rect coords="590,250,710,320" href="https://${microsite_cname}/support-role.html">
 	<area shape=rect coords="590,170,710,240" href="https://${microsite_cname}/breaking-agreements.html">
