--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -10,6 +10,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li><a href="acknowledgments.html">Acknowledgments</a></p></li>
+          <li><a href="disclaimer.html">Disclaimer</a></p></li>
           <li><a href="https://github.com/S3-working-group/s3-practical-guide">Fork on GitHub</a></li>
           <li>Contact:<br/><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
@@ -33,7 +34,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p><strong>v2020-05-08</strong></p>
+        <p><strong>v2021-01-12</strong></p>
         <p>{{ site.description }}</p>
         <p>This work by Bernhard Bockelbrink, James Priest and Liliana David is licensed under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
       </div>
