added smartmenus (quick & dirty)

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -25,4 +25,11 @@
       hideWhenAnnotating();
     }
   </script>
+
+
+  <!-- SmartMenus core CSS & styles (required) -->
+  <link href="menu/sm-core-css.css" rel="stylesheet" type="text/css" />
+  <link href="menu/sm-mint.css" rel="stylesheet" type="text/css" />
+  
+
 </head>
