--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,8 @@
 
     {% include header.html %}
 
+    {% include menu.html %}
+
     <div class="page-content">
       <div class="wrapper" markdown="1">
         {{ content }}
@@ -14,6 +16,7 @@
     </div>
 
     {% include footer.html %}
+    {% include smartmenu.html %}
 
   </body>
 
