moved menu to header and unified with existing menu

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -43,12 +43,11 @@ $on-laptop:        800px;
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
         "layout",
         "glossary-overlay",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "menu-placement"
 ;
