--- a/content/website/_includes/header.html
+++ b/content/website/_includes/header.html
@@ -2,7 +2,7 @@
   <p><a class="site-title" href="\{\{ site.baseurl \}\}/">\{\{ site.title \}\}</a></p>
 </header>
 <nav id="main-nav">
-  <ul id="main-menu" class="sm sm-mint">
+  <ul id="main-menu" class="sm sm-mint sm-vertical">
     <li><a href="index.html">Home</a></li>
     {{html-menu}}
     <li><a href="#">Tools</a>
