--- a/docs/_sass/_menu-placement.scss
+++ b/docs/_sass/_menu-placement.scss
@@ -5,4 +5,10 @@
         float: left;
         width: 12em;
     }
+    .sm-mint.sm-vertical {
+        border-bottom: 0;
+        border-right: 2px solid #8db863;
+        margin-right: 20px;
+    }
 }
+
