integrated sm theme as scss

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -49,5 +49,6 @@ $on-laptop:        768px;
         "layout",
         "glossary-overlay",
         "syntax-highlighting",
+        "sm-mint",
         "menu-placement"
 ;
