--- a/docs/_sass/_menu-placement.scss
+++ b/docs/_sass/_menu-placement.scss
@@ -7,7 +7,7 @@
     }
     .sm-mint.sm-vertical {
         border-bottom: 0;
-        border-right: 2px solid #8db863;
+        border-right: 2px solid #9aadeb;
         margin-right: 20px;
     }
 }
