re-shuffled structure

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,11 +10,19 @@
   <!-- the actual menu -->
   <ul id="main-menu" class="sm sm-mint sm-vertical">
     <li><a href="index.html">Home</a></li>
-    <li><a href="introduction.html">Introduction</a>
+    <li><a href="what-is-s3.html">What is Sociocracy 3.0?</a>
 
 <ul>
 
-<li><a href="s3-overview.html">What is Sociocracy 3.0?</a>
+<li><a href="how-does-s3-help.html">How does Sociocracy 3.0 help?</a>
+
+</li>
+
+<li><a href="pattern.html">A pattern-based approach to organizational change</a>
+
+</li>
+
+<li><a href="contents.html">What's in this guide?</a>
 
 </li>
 
@@ -26,19 +34,11 @@
 
 </li>
 
-<li><a href="patterns-and-principles.html">Patterns and the Seven Principles</a>
-
-<ul>
-
-<li><a href="pattern.html">Patterns</a>
+</ul>
 
 </li>
 
 <li><a href="principles.html">The Seven Principles</a>
-
-</li>
-
-</ul>
 
 </li>
 
@@ -63,10 +63,6 @@
 </li>
 
 <li><a href="governance.html">Governance and Operations</a>
-
-</li>
-
-</ul>
 
 </li>
 
