styles for bottom navigation

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -188,8 +188,10 @@
     display: block;
     font-size: 24px;
 }
-
-
+.bottom-nav {
+    padding-top: $spacing-unit;
+    font-size: $small-font-size;
+}
 
 /**
  * Posts
