more colorful homepage

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -47,6 +47,7 @@ $on-laptop:        768px;
 @import
         "base",
         "layout",
+        "homepage",
         "glossary-overlay",
         "syntax-highlighting",
         "sm-mint",
