added shorter menu titles

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -38,11 +38,11 @@
 
 </li>
 
-<li><a href="principles.html">The Seven Principles</a>
+<li><a href="principles.html">Principles</a>
 
 </li>
 
-<li><a href="making-sense-of-organizations.html">Key Concepts for Making Sense of Organizations</a>
+<li><a href="making-sense-of-organizations.html">Concepts</a>
 
 <ul>
 
