--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -8,9 +8,13 @@
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/menu/sm-core-css.css" | prepend: site.baseurl }}">
+
   <!-- for local testing: -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="menu/sm-core-css.css">
+
+  <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="js/mousetrap.1.6.5.min.js"></script>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
