--- a/docs/_includes/smartmenu.html
+++ b/docs/_includes/smartmenu.html
@@ -1,10 +1,12 @@
-  <script src="js/jquery-3.5.1.min.js"></script>
-  <script type="text/javascript" src="menu/jquery.smartmenus.min.js"></script>
-  <script type="text/javascript">
-    $(function() {
-      $('#main-menu').smartmenus({
-        subMenusSubOffsetX: 6,
-        subMenusSubOffsetY: -8
-      });
+<script type="text/javascript" src="menu/jquery.smartmenus.min.js"></script>
+<script type="text/javascript" src="menu/jquery.smartmenus.keyboard.min.js"></script>
+
+<script type="text/javascript">
+  $(function() {
+    $('#main-menu').smartmenus({
+      subMenusSubOffsetX: 6,
+      subMenusSubOffsetY: -8
     });
-  </script>
+    $('#main-menu').smartmenus('keyboardSetHotkey', 77, 'shiftKey');
+  });
+</script>
