--- a/templates/website/_layouts/default.html
+++ b/templates/website/_layouts/default.html
@@ -11,6 +11,7 @@
       </div>
       {% include footer.html %}
       {% include smartmenu.html %}
+      {% include keyboard-nav.html %}
     </div>
   </body>
 </html>
