added documentation about keyboard navigation

--- a/docs/_includes/keyboard-nav.html
+++ b/docs/_includes/keyboard-nav.html
@@ -24,4 +24,9 @@
     window.location.href = 'index.html';
     return false;
   });
+  <!-- Go Single Page Version -->
+  Mousetrap.bind('g s', function() {
+    window.location.href = 'all.html';
+    return false;
+  });
 </script>
