--- a/docs/_sass/_homepage.scss
+++ b/docs/_sass/_homepage.scss
@@ -39,3 +39,9 @@
   border-color: #a073bf;
   color: #a073bf;
 }
+
+.hp-box4 {
+  background: #f1f2f3;
+  border-color: #6c797f;
+  color: #6c797f;
+}
