--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
     border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 2px solid $grey-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -13,7 +13,6 @@
 .site-title {
     font-size: 26px;
     font-weight: 300;
-    line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
     //float: left;
@@ -22,6 +21,24 @@
     &:visited {
         color: $grey-color-dark;
     }
+}
+
+.header-wrapper {
+    @extend %clearfix;
+}
+.header-col {
+    margin-bottom: $spacing-unit / 2;
+    padding-left: $spacing-unit / 2;
+    margin-top: $spacing-unit / 2;
+}
+
+.header-title {
+    float: left;
+}
+
+.header-icons {
+    float: right;
+    text-align: right;
 }
 
 .site-nav {
@@ -98,7 +115,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    border-top: 2px solid $grey-color-light;
     padding: $spacing-unit 0;
     font-size: $small-font-size;
     color: $grey-color;
@@ -191,6 +208,10 @@
 .bottom-nav {
     padding-top: $spacing-unit;
     font-size: $small-font-size;
+}
+
+dl.glossary dt {
+    font-weight: 700;
 }
 
 /**
