--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,5 +1,6 @@
-<header class="site-header">
-  <p><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></p>
+<header class="site-header header-wrapper">
+  <div class="header-col header-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></div>
+  <div class="header-col header-icons"><a href="map.html" ><img src="img/map.png" title="Use the pattern map to jump to another pattern." /></a> <span id="annotate-span"><a href="" id="annotate-link"><img src="img/feedback.png" title="Annotate this page with hypothes.is. Click here, wait for the page to reload, then you can highlight text and add public comments. You will need to set up a free account at hypothes.is." /></a></span></div>
 </header>
 <nav id="main-nav">
   <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -10,9 +11,11 @@
   <!-- the actual menu -->
   <ul id="main-menu" class="sm sm-mint sm-vertical">
     <li><a href="index.html">Home</a></li>
-    <li><a href="what-is-s3.html">What is Sociocracy 3.0?</a>
+    <li><a href="what-is-s3.html">What is S3?</a>
 
 <ul>
+
+<li><a href="what-is-s3.html">What is S3?</a>
 
 <li><a href="how-does-s3-help.html">How does Sociocracy 3.0 help?</a>
 
@@ -46,6 +49,8 @@
 
 <ul>
 
+<li><a href="making-sense-of-organizations.html">Concepts</a>
+
 <li><a href="driver.html">Drivers</a>
 
 </li>
@@ -74,9 +79,13 @@
 
 <ul>
 
+<li><a href="patterns.html">The Patterns</a>
+
 <li><a href="co-creation-and-evolution.html">Co-Creation and Evolution</a>
 
 <ul>
+
+<li><a href="co-creation-and-evolution.html">Co-Creation and Evolution</a>
 
 <li><a href="respond-to-organizational-drivers.html">Respond to Organizational Drivers</a>
 
@@ -134,6 +143,8 @@
 
 <ul>
 
+<li><a href="peer-development.html">Peer Development</a>
+
 <li><a href="ask-for-help.html">Ask For Help</a>
 
 </li>
@@ -157,6 +168,8 @@
 <li><a href="enablers-of-collaboration.html">Enablers of Collaboration</a>
 
 <ul>
+
+<li><a href="enablers-of-collaboration.html">Enablers of Collaboration</a>
 
 <li><a href="artful-participation.html">Artful Participation</a>
 
@@ -202,6 +215,8 @@
 
 <ul>
 
+<li><a href="building-organizations.html">Building Organizations</a>
+
 <li><a href="delegate-influence.html">Delegate Influence</a>
 
 </li>
@@ -246,6 +261,8 @@
 
 <ul>
 
+<li><a href="bringing-in-s3.html">Bringing in S3</a>
+
 <li><a href="adapt-patterns-to-context.html">Adapt Patterns To Context</a>
 
 </li>
@@ -277,6 +294,8 @@
 <li><a href="defining-agreements.html">Defining Agreements</a>
 
 <ul>
+
+<li><a href="defining-agreements.html">Defining Agreements</a>
 
 <li><a href="record-agreements.html">Record Agreements</a>
 
@@ -318,6 +337,8 @@
 
 <ul>
 
+<li><a href="focused-interactions.html">Focused Interactions</a>
+
 <li><a href="governance-meeting.html">Governance Meeting</a>
 
 </li>
@@ -345,6 +366,8 @@
 <li><a href="meeting-practices.html">Meeting Practices</a>
 
 <ul>
+
+<li><a href="meeting-practices.html">Meeting Practices</a>
 
 <li><a href="rounds.html">Rounds</a>
 
@@ -381,6 +404,8 @@
 <li><a href="organizing-work.html">Organizing Work</a>
 
 <ul>
+
+<li><a href="organizing-work.html">Organizing Work</a>
 
 <li><a href="backlog.html">Backlog</a>
 
@@ -422,6 +447,8 @@
 
 <ul>
 
+<li><a href="organizational-structure.html">Organizational Structure</a>
+
 <li><a href="service-circle.html">Service Circle</a>
 
 </li>
@@ -454,9 +481,11 @@
 
 </li>
 
-<li><a href="csf.html">CSF</a>
+<li><a href="csf.html">CommonS3nse</a>
 
 <ul>
+
+<li><a href="csf.html">CommonS3nse</a>
 
 <li><a href="thrive.html">An Organization Where BOTH the People and the Organization can Thrive</a>
 
@@ -469,6 +498,8 @@
 <li><a href="orientation.html">Orientation</a>
 
 <ul>
+
+<li><a href="orientation.html">Orientation</a>
 
 <li><a href="clarify-purpose.html">Clarify Purpose</a>
 
@@ -485,6 +516,8 @@
 <li><a href="navigation.html">Navigation</a>
 
 <ul>
+
+<li><a href="navigation.html">Navigation</a>
 
 <li><a href="focus-on-value.html">Focus on Value</a>
 
@@ -506,6 +539,8 @@
 
 <ul>
 
+<li><a href="structure.html">Structure</a>
+
 <li><a href="enable-autonomy.html">Enable Autonomy</a>
 
 </li>
@@ -521,6 +556,8 @@
 <li><a href="transformation.html">Transformation</a>
 
 <ul>
+
+<li><a href="transformation.html">Transformation</a>
 
 <li><a href="invest-in-learning.html">Invest in Learning</a>
 
@@ -549,6 +586,8 @@
 <li><a href="appendix.html">Appendix</a>
 
 <ul>
+
+<li><a href="appendix.html">Appendix</a>
 
 <li><a href="changelog.html">Changelog</a>
 
@@ -590,8 +629,9 @@
 
 </li>
 
-    <li><a href="#">Tools</a>
+    <li><a href="#">Quick Links</a>
       <ul class="mega-menu">
+        <li><a href="index.html">How to Use This Website</a></li>
         <li><a href="pattern-index.html">Pattern Index</a></li>
         <li><a href="glossary.html">Glossary</a></li>
         <li><a href="changelog.html">Changelog</a></li>
