--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -6,8 +6,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="keywords" content="sociocracy, holacracy, s3, scrum, kanban, agile, lean">
-  <meta name="author" content="Bernard Bockelbrink, James Priest, Liliana David">
-
+  <meta name="author" content="Bernhard Bockelbrink, James Priest, Liliana David">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/menu/sm-core-css.css" | prepend: site.baseurl }}">
