--- a/templates/website/pattern-map.html
+++ b/templates/website/pattern-map.html
@@ -6,7 +6,7 @@
 	<area shape=rect coords="170,330,290,400" href="https://${microsite_cname}/role-selection.html">
 	<area shape=rect coords="300,330,420,400" href="https://${microsite_cname}/driver-mapping.html">
 	<area shape=rect coords="40,250,160,320" href="https://${microsite_cname}/evaluate-and-evolve-agreements.html">
-	<area shape=rect coords="170,250,290,320" href="https://${microsite_cname}/those-affected-decide.html">
+	<area shape=rect coords="170,250,290,320" href="https://${microsite_cname}/involve-those-affected.html">
 	<area shape=rect coords="300,170,420,240" href="https://${microsite_cname}/resolve-objections.html">
 	<area shape=rect coords="40,170,160,240" href="https://${microsite_cname}/consent-decision-making.html">
 	<area shape=rect coords="300,250,420,320" href="https://${microsite_cname}/co-create-proposals.html">
