--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header header-wrapper">
   <div class="header-col header-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></div>
-  <div class="header-col header-icons"><a href="map.html" ><img src="img/map.png" title="Use the pattern map to jump to another pattern." /></a> <span id="annotate-span"><a href="" id="annotate-link"><img src="img/feedback.png" title="Annotate this page with hypothes.is. Click here, wait for the page to reload, then you can highlight text and add public comments. You will need to set up a free account at hypothes.is." /></a></span></div>
+  <div class="header-col header-icons"><a href="pattern-index.html" ><img src="img/a-z.png" title="An alphabetical index of all patterns." /></a>&nbsp;<a href="map.html" ><img src="img/map.png" title="Use the pattern map to jump to another pattern." /></a>&nbsp;<span id="annotate-span"><a href="" id="annotate-link"><img src="img/feedback.png" title="Annotate this page with hypothes.is. Click here, wait for the page to reload, then you can highlight text and add public comments. You will need to set up a free account at hypothes.is." /></a></span></div>
 </header>
 <nav id="main-nav">
   <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -115,7 +115,7 @@
 
 </li>
 
-<li><a href="those-affected-decide.html">Those Affected Decide</a>
+<li><a href="involve-those-affected.html">Involve Those Affected</a>
 
 </li>
 
@@ -632,12 +632,13 @@
     <li><a href="#">Quick Links</a>
       <ul class="mega-menu">
         <li><a href="index.html">How to Use This Website</a></li>
-        <li><a href="pattern-index.html">Pattern Index</a></li>
         <li><a href="glossary.html">Glossary</a></li>
         <li><a href="changelog.html">Changelog</a></li>
-        <li><a href="https://sociocracy30.org">Go to main S3 site</a></li>
-        <li><a href="map.html" ><img src="img/map.png" title="Use the pattern map to jump to another pattern." /> Pattern Map</a></li>
-        <li><span id="annotate-span"><a href="" id="annotate-link"><img src="img/feedback.png" title="Annotate this page with hypothes.is. Click here, wait for the page to reload, then you can highlight text and add public comments. You will need to set up a free account at hypothes.is." />Annotate Page</a></span></li>
+        <li><a href="pattern-index.html" title="An alphabetical index of all patterns."><img src="img/a-z.png"/>&nbsp;Pattern Index</a></li>
+        <li><a href="map.html" title="Use the pattern map to jump to another pattern."><img src="img/map.png"/>&nbsp;Pattern Map</a></li>
+        <li><span id="annotate-span"><a href="" id="annotate-link" title="Annotate this page with hypothes.is. Click here, wait for the page to reload, then you can highlight text and add public comments. You will need to set up a free account at hypothes.is."><img src="img/feedback.png"/>&nbsp;Annotate Page</a></span></li>
+        <li><a href="https://sociocracy30.org/resources/#se-practical-guide">Downloads</a></li>
+        <li><a href="https://sociocracy30.org">Sociocracy 3.0 site</a></li>
       </ul>
     </li>
   </ul>
