--- a/docs/_sass/_homepage.scss
+++ b/docs/_sass/_homepage.scss
@@ -2,10 +2,10 @@
 * special styles for the homepage
 **/
 
-$hp-box1-color-main:  #45996d !default;
-$hp-box2-color-main:  #7f98e5 !default;
-$hp-box3-color-main:  #a073bf !default;
-$hp-box4-color-main:  #6c797f !default;
+$hp-box-green-color-main:  #45996d !default;
+$hp-box-blue-color-main:  #7f98e5 !default;
+$hp-box-purple-color-main:  #a073bf !default;
+$hp-box-grey-color-main:  #6c797f !default;
 
 .hp-version {
   text-align: right;
@@ -26,25 +26,25 @@ $hp-box4-color-main:  #6c797f !default;
   font-style: italic;
 }
 
-.hp-box1 {
-  background: rgba($hp-box1-color-main, 0.1);
-  border-color: rgba($hp-box1-color-main, 0.2);
-  color: darken( $hp-box1-color-main, 15% );
+.hp-box-green {
+  background: rgba($hp-box-green-color-main, 0.1);
+  border-color: rgba($hp-box-green-color-main, 0.2);
+  color: darken( $hp-box-green-color-main, 15%);
 }
-.hp-box2 {
-  background: rgba($hp-box2-color-main, 0.1);
-  border-color: rgba($hp-box2-color-main, 0.2);
-  color: darken( $hp-box2-color-main, 15% );
+.hp-box-blue {
+  background: rgba($hp-box-blue-color-main, 0.1);
+  border-color: rgba($hp-box-blue-color-main, 0.2);
+  color: darken( $hp-box-blue-color-main, 15%);
 }
-.hp-box3 {
-  background: rgba($hp-box3-color-main, 0.1);
-  border-color: rgba($hp-box3-color-main, 0.2);
-  color: darken( $hp-box3-color-main, 15% );
+.hp-box-purple {
+  background: rgba($hp-box-purple-color-main, 0.1);
+  border-color: rgba($hp-box-purple-color-main, 0.2);
+  color: darken( $hp-box-purple-color-main, 15%);
 }
-.hp-box4 {
-  background: rgba($hp-box4-color-main, 0.1);
-  border-color: rgba($hp-box4-color-main, 0.2);
-  color: darken( $hp-box4-color-main, 15% );
+.hp-box-grey {
+  background: rgba($hp-box-grey-color-main, 0.1);
+  border-color: rgba($hp-box-grey-color-main, 0.2);
+  color: darken( $hp-box-grey-color-main, 15%);
 }
 
 
