--- a/content/website/_includes/footer.html
+++ b/content/website/_includes/footer.html
@@ -5,7 +5,7 @@
 
   <div class="footer-col-wrapper">
     <div class="footer-col footer-col-1">
-      <p><a href=https://sociocracy30.org/contact/">Contact Us | <a href="disclaimer.html">Disclaimer</a> | <a href="acknowledgments.html">Acknowledgments</a></p>
+      <p><a href="https://sociocracy30.org/contact/">Contact Us</a> | <a href="disclaimer.html">Disclaimer</a> | <a href="acknowledgments.html">Acknowledgments</a></p>
       <p>${version}</p>
     </div>
     <div class="footer-col footer-col-2">
