--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -18,8 +18,7 @@
   <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="js/mousetrap.1.6.5.min.js"></script>
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | prepend: site.baseurl | prepend: site.url | replace:'/index.html','/' }}">
   <script>
     function setAnnotationHref() {
       document.getElementById("annotate-link").href = "https://via.hypothes.is/" + self.document.location.href;
