--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -47,7 +47,7 @@
 
 <li><a href="principles.html">Principles</a>
 
-<li><a href="principle-effectiveness.html">The Principle of Effectiveness: </a>
+<li><a href="principle-effectiveness.html">The Principle of Effectiveness </a>
 
 </li>
 
