--- a/templates/website/pattern-map.html
+++ b/templates/website/pattern-map.html
@@ -39,7 +39,7 @@
 	<area shape=rect coords="880,410,1000,480" href="https://${microsite_cname}/delegate-circle.html">
 	<area shape=rect coords="1140,250,1260,320" href="https://${microsite_cname}/open-systems.html">
 	<area shape=rect coords="1010,250,1130,320" href="https://${microsite_cname}/helping-team.html">
-	<area shape=rect coords="880,250,1000,320" href="https://${microsite_cname}/open-domain.html">
+	<area shape=rect coords="880,250,1000,320" href="https://${microsite_cname}/open-team.html">
 	<area shape=rect coords="880,30,1260,80" href="https://${microsite_cname}/building-organizations.html">
 	<area shape=rect coords="880,170,1000,240" href="https://${microsite_cname}/representative.html">
 	<area shape=rect coords="1140,170,1260,240" href="https://${microsite_cname}/double-linking.html">
@@ -47,7 +47,14 @@
 	<area shape=rect coords="880,90,1000,160" href="https://${microsite_cname}/delegate-influence.html">
 	<area shape=rect coords="1140,90,1260,160" href="https://${microsite_cname}/role.html">
 	<area shape=rect coords="1010,90,1130,160" href="https://${microsite_cname}/circle.html">
-	<area shape=rect coords="1300,590,1680,640" href="https://${microsite_cname}/">
+	<area shape=rect coords="1300,590,1680,640" href="https://${microsite_cname}/principles.html">
+	<area shape=rect coords="1300,650,1420,720" href="https://${microsite_cname}/principle-continuous-improvement.html">
+	<area shape=rect coords="1560,650,1680,720" href="https://${microsite_cname}/principle-accountability.html">
+	<area shape=rect coords="1430,650,1550,720" href="https://${microsite_cname}/principle-transparency.html">
+	<area shape=rect coords="1300,810,1420,880" href="https://${microsite_cname}/principle-consent.html">
+	<area shape=rect coords="1560,810,1680,880" href="https://${microsite_cname}/principle-effectiveness.html">
+	<area shape=rect coords="1430,810,1550,880" href="https://${microsite_cname}/principle-equivalence.html">
+	<area shape=rect coords="1430,730,1550,800" href="https://${microsite_cname}/principle-empiricism.html">
 	<area shape=rect coords="590,570,710,640" href="https://${microsite_cname}/governance-backlog.html">
 	<area shape=rect coords="720,490,840,560" href="https://${microsite_cname}/meeting-host.html">
 	<area shape=rect coords="590,490,710,560" href="https://${microsite_cname}/evaluate-meetings.html">
